# cli_asistant

./: Cargo.toml  Readme.md  cli.db  index.html
src/: cli.rs  commands.rs  lib.rs  main.rs
src/cli/: args.rs  command_enum.rs
src/commands/: analyze.rs  dispatcher.rs  fix.rs  generate.rs  repl.rs  review.rs  search.rs  track.rs
src/commands/track/: db.rs  start.rs  status.rs  stop.rs  summary.rs
src/services/: openai.rs
