[package]
name = "cli_asistant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "3"
mockito = "1.7.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2"
rusqlite = { version = "0.35.0", features = ["bundled"] }
chrono = "0.4.41"
similar = "2.7.0"
dialoguer = "0.11.0"
rustyline = "15.0.0"
shell-words = "1.0.0"
dirs-next = "2"
dotenvy = "0.15"
serde_json = "1.0.140"

[dev-dependencies]
mockito = "1"